lab/manifest/mongo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
  labels:
    name: mongodb

# kubectl config set-context --current --namespace=mongodb
