lab/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-apps-ingress
spec:
  tls:
    - hosts:
      - mymongo.com
      secretName: app-tls
  rules:
    - host: mymongo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
    # default with no Host in Header
    # - http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: svc-app3
    #             port:
    #               number: 80

# ingress or ing
# k get ingress
